apps/ubuntu-prep/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubuntu-prep
spec:
  type: ExternalName
  externalName: raw.githubusercontent.com
