apps/ubuntu-prep/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubuntu-prep
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /NPastorale/ubuntu-prep/master/ubuntu-prep.sh
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: "raw.githubusercontent.com"
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - ubuntu-prep.nahue.ar
      secretName: archinstall
  rules:
    - host: ubuntu-prep.nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ubuntu-prep
                port:
                  number: 443
